--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <div class="container">
-      <div class="logo1" >
+      <div class="logo" >
         <img height="60" width="350" src="img/logo.png" alt="">
       </div>
         <nav>
