login modal now opens/closes

--- a/about.html
+++ b/about.html
@@ -23,6 +23,11 @@
     </div>
   </header>
 
+  <section class="aboutpage">
+
+
+  </section>
+
   <footer>
     <p class="foot-writing">The Neutral Zone, Copyright &copy; 2018 </p>
   </footer>
