--- a/index.html
+++ b/index.html
@@ -17,12 +17,20 @@
         <nav>
           <ul>
             <li><a href="index.html">Home</a>
-            <li><a href="login.html">Login</a>
+            <!--<li class="openmodal"><a href="">Login</a>-->
+            <button id="open-button" class="button">Login</button>
             <li><a href="about.html">About</a>
           </ul>
         </nav>
     </div>
   </header>
+
+  <div id="loginmodal" class="modal">
+    <div class="modal-content">
+      <span class="close-button">&times</span>
+      <p>hi</p>
+    </div>
+  </div>
 
   <section class="homepage">
     <div class="container">
@@ -36,5 +44,7 @@
     <p class="foot-writing">The Neutral Zone, Copyright &copy; 2018 </p>
   </footer>
 
+
+  <script src="js/main.js"></script>
 </body>
 </html>
