login modal working on about page

--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
         <nav>
           <ul>
             <li><a href="index.html">Home</a>
-            <!--<li class="openmodal"><a href="">Login</a>-->
-            <button id="open-button" class="button">Login</button>
+            <li><button id="open-button" class="button">Login</button>
             <li><a href="about.html">About</a>
           </ul>
         </nav>
