--- a/about.html
+++ b/about.html
@@ -16,12 +16,19 @@
         <nav>
           <ul>
             <li><a href="index.html">Home</a>
-            <li><a href="login.html">Login</a>
+            <li><button id="open-button" class="button">Login</button>
             <li><a href="about.html">About</a>
           </ul>
         </nav>
     </div>
   </header>
+
+  <div id="loginmodal" class="modal">
+    <div class="modal-content">
+      <span class="close-button">&times</span>
+      <p>hi</p>
+    </div>
+  </div>
 
   <section class="aboutpage">
 
@@ -31,8 +38,8 @@
   <footer>
     <p class="foot-writing">The Neutral Zone, Copyright &copy; 2018 </p>
   </footer>
+
+
+  <script src="js/main.js"></script>
 </body>
-
-
-
 </html>
