--- a/about.html
+++ b/about.html
@@ -52,7 +52,15 @@
   </div>
 
   <section class="aboutpage">
-
+    <h1 class="about-title"> About </h1>
+    <div class="about-container">
+      <p class="about-p">This is the main body text. Here is where we write the major content of the page. 
+      Try to keep it concise and relevant. This is what the user will most likely read directly
+      after looking at the title, so it should immediately hook their interest and keep them
+      involved until the end. This is crappy filler text but serves mostly as an example of
+      what you could do with stored bits of filler text. No more having to copy paste from a
+      text file or generator. Immediately have what you need, a mere hotkey away!</p>
+    </div>
 
   </section>
 
