--- a/index.html
+++ b/index.html
@@ -62,6 +62,11 @@
         <span class="close-button">&times</span>
         <h1 class="modal-title">Register</h1>
       </div>
+      <div class="register-modal-body">
+        <label for="username">Full Name</label>
+        <input type="text" placeholder="First Name" name="username">
+        <input type="text" placeholder="Last Name" name="password">
+      </div>
     </div>
   </div>
 
