--- a/index.html
+++ b/index.html
@@ -6,19 +6,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>The Neutral Zone</title>
   <link href="css/style.css" rel="stylesheet" type="text/css">
+  <script src="js/jquery-3.3.1.min.js"></script>
+  <script src="js/main.js"></script>
 </head>
 
 <body>
   <header>
     <div class="container">
-      <div class="logo" >
-        <img height="60" width="350" src="img/logo.png" alt="">
+      <div class="logo">
+        <img id="logo" height="60" width="350" src="img/logo.png" alt="">
       </div>
         <nav>
           <ul>
-            <li><a href="index.html">Home</a>
+            <li id="home-button"><a href="index.html">Home</a>
             <li><button id="open-button" class="button">Login</button>
-            <li><a href="about.html">About</a>
+            <li id="about-button"><a href="about.html">About</a>
           </ul>
         </nav>
     </div>
@@ -29,7 +31,7 @@
   <div id="loginmodal" class="modal">
     <div class="modal-content">
       <div class="modal-header">
-        <span class="close-button">&times</span>
+        <span id="closelogin" class="close-button">&times</span>
         <h1 class="modal-title">login</h1>
       </div>
 
@@ -49,7 +51,7 @@
 
       <div class="container" style="background-color:#f1f1f1">
         <span class="psw">Forgot <a href="#">password?</a></span>
-        <span class="register">Don't have an account? <a href="#"> Register </a></span>
+        <span class="register">Don't have an account? <a id="register-button" href="#"> Register </a></span>
       </div>
     </div>
   </div>
@@ -59,7 +61,7 @@
   <div id="register-modal" class="modal-rgstr">
     <div class="register-modal-content">
       <div class="modal-header">
-        <span class="close-button">&times</span>
+        <span id="closeregister" class="close-button">&times</span>
         <h1 class="modal-title">Register</h1>
       </div>
       <div class="register-modal-body">
@@ -71,19 +73,40 @@
   </div>
 
   <section class="homepage">
-    <div class="container">
+    <div class="wrap">
+      <div id="arrow-left" class="arrow"></div>
+      <div id="slider">
+        <div class="slide slide1">
+          <div class="slide-content">
+            <span>This is picture 1</span>
+          </div>
+        </div>
+        <div class="slide slide2">
+          <div class="slide-content">
+            <span>This is picture 2</span>
+          </div>
+        </div>
+        <div class="slide slide3">
+          <div class="slide-content">
+            <span>This is picture 3</span>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!--<div class="container">
       <h1 class="slogan">All Hockey. All the Time.</h1>
         <p><i>A blog for hockey fans all over the
           world</i></p>
-    </<div>
+    </<div>-->
   </section>
 
-  <footer>
-    <p class="foot-writing">The Neutral Zone, Copyright &copy; 2018 </p>
+  <!--<footer>-->
+    <!--<p class="foot-writing">The Neutral Zone, Copyright &copy; 2018 </p>-->
     <!--<span class="contact"><a href="#">Contact Us</a></span>-->
-  </footer>
+  <!--</footer>-->
 
 
-  <script src="js/main.js"></script>
+
 </body>
 </html>
