centered the slide show to center. Added to the register modal.

--- a/about.html
+++ b/about.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>About</title>
   <link href="css/style.css" rel="stylesheet" type="text/css">
+  <script src="js/jquery-3.3.1.min.js"></script>
+  <script src="js/main.js"></script>
 </head>
 
 <body>
@@ -15,9 +17,9 @@
       </div>
         <nav>
           <ul>
-            <li><a href="index.html">Home</a>
+            <li id="home-button"><a href="index.html">Home</a>
             <li><button id="open-button" class="button">Login</button>
-            <li><a href="about.html">About</a>
+            <li id="about-button"><a href="about.html">About</a>
           </ul>
         </nav>
     </div>
@@ -26,7 +28,7 @@
   <div id="loginmodal" class="modal">
     <div class="modal-content">
       <div class="modal-header">
-        <span class="close-button">&times</span>
+        <span id="closelogin" class="close-button">&times</span>
         <h1 class="modal-title">login</h1>
       </div>
 
@@ -54,7 +56,7 @@
   <section class="aboutpage">
     <h1 class="about-title"> About </h1>
     <div class="about-container">
-      <p class="about-p">This is the main body text. Here is where we write the major content of the page. 
+      <p class="about-p">This is the main body text. Here is where we write the major content of the page.
       Try to keep it concise and relevant. This is what the user will most likely read directly
       after looking at the title, so it should immediately hook their interest and keep them
       involved until the end. This is crappy filler text but serves mostly as an example of
