--- a/index.html
+++ b/index.html
@@ -65,9 +65,15 @@
         <h1 class="modal-title">Register</h1>
       </div>
       <div class="register-modal-body">
-        <label for="username">Full Name</label>
-        <input type="text" placeholder="First Name" name="username">
-        <input type="text" placeholder="Last Name" name="password">
+        <label for="fullname">Full Name</label>
+        <input type="text" placeholder="First Name" name="firstname">
+        <input type="text" placeholder="Last Name" name="lastname">
+        <label for="username">Pick a Username:</label>
+        <input type="text" placeholder="jsmith123" name="username">
+        <label for="password">Create a Password:</label>
+        <input type="password" placeholder="" name="password">
+        <label for="confirm-password">Retype Password:</label>
+        <input type="password" placeholder="" name="confirm-password">
       </div>
     </div>
   </div>
